// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: ThemeModeButton renders dark theme correctly 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root makeStyles-navBarButton-5"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <svg
      data-file-name="SvgIcon_light_mode"
      fill="#000"
      height={10}
      width={10}
    />
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`component: ThemeModeButton renders light theme correctly 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root makeStyles-navBarButton-5"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <svg
      data-file-name="SvgIcon_dark_mode"
      fill="#000"
      height={10}
      width={10}
    />
  </span>
</button>
`;
